RESOLVED FIXED160981
AX: iOS, Wrong axLabel on static text if heading has multiple children
https://bugs.webkit.org/show_bug.cgi?id=160981
Summary AX: iOS, Wrong axLabel on static text if heading has multiple children
Nan Wang
Reported 2016-08-18 16:35:56 PDT
When heading has multiple children, each static text child seems to have the axLabel to be the concatenation of all the heading children's labels. <rdar://problem/27827108>
Attachments
Patch (5.69 KB, patch)
2016-08-18 16:55 PDT, Nan Wang
no flags
Archive of layout-test-results from ews122 for ios-simulator-elcapitan-wk2 (682.74 KB, application/zip)
2016-08-18 18:58 PDT, Build Bot
no flags
Patch (5.80 KB, patch)
2016-08-19 10:34 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-08-18 16:55:10 PDT
Build Bot
Comment 2 2016-08-18 18:58:49 PDT
Comment on attachment 286414 [details] Patch Attachment 286414 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1895740 New failing tests: fast/scrolling/ios/scroll-events-back-forward.html
Build Bot
Comment 3 2016-08-18 18:58:52 PDT
Created attachment 286429 [details] Archive of layout-test-results from ews122 for ios-simulator-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.5
Nan Wang
Comment 4 2016-08-18 23:40:51 PDT
Comment on attachment 286414 [details] Patch test failure is not related to this patch.
chris fleizach
Comment 5 2016-08-19 09:01:00 PDT
Comment on attachment 286414 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=286414&action=review > Source/WebCore/ChangeLog:9 > + no alternate texts. So we shouldn't use accessibilityLable to check for user defined texts no alternate "text." - text is already plural here accessibilityLable -> accessibilityLabel this description isn't very clear to me... what is the problem with calling axLabel? what does it return, that baseDescription does not > LayoutTests/accessibility/ios-simulator/heading-with-aria-label.html:40 > + // Also make sure when the heading has multiple children, we are not messing up with "messing up" is too colloquial here. I would say "When a heading has multiple children, ensure ..."
Nan Wang
Comment 6 2016-08-19 10:34:14 PDT
Created attachment 286457 [details] Patch Update from review
WebKit Commit Bot
Comment 7 2016-08-19 12:25:09 PDT
Comment on attachment 286457 [details] Patch Clearing flags on attachment: 286457 Committed r204645: <http://trac.webkit.org/changeset/204645>
WebKit Commit Bot
Comment 8 2016-08-19 12:25:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.