AX: iOS, Wrong axLabel on static text if heading has multiple children https://bugs.webkit.org/show_bug.cgi?id=160981

Reviewed by Chris Fleizach.

Source/WebCore:

Headings are using textUnderElement to compute the accessibilityLabel on iOS, so normally it's
the concatenation of all the children's accessibilityLabel. Therefore, we shouldn't use accessibilityLabel
to check for user defined text on headings. Instead, baseAccessibilityDescription will return the
alternate text we want.

Changes are covered in the modified test.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityTraitsFromAncestors]):

LayoutTests:

* accessibility/ios-simulator/heading-with-aria-label-expected.txt:
* accessibility/ios-simulator/heading-with-aria-label.html:


Canonical link: https://commits.webkit.org/179121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204645 268f45cc-cd09-0410-ab3c-d52691b4dbfc